name:                docker-hs
version:             0.0.0.0
synopsis:            A Docker client for Haskell
homepage:            https://github.com/nahiluhmot/docker-hs
license:             MIT
license-file:        LICENSE
author:              Tom Hulihan
maintainer:          hulihan.tom159@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  build-depends:       base ==4.6.*, bytestring ==0.10.*, http-streams ==0.7.*,
                       mtl ==2.1.*, io-streams ==1.1.*
  exposed-modules:     Docker
  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite spec
  hs-source-dirs:      src, spec
  main-is:             Spec.hs
  type:                exitcode-stdio-1.0
  build-depends:       base ==4.6.*, bytestring ==0.10.*, http-streams ==0.7.*,
                       mtl ==2.1.*, io-streams ==1.1.*, hspec ==1.8.*

  ghc-options:         -Wall
